Migrate a few classes to records
Semi-automatic conversion to records. Only classes that did not have a "modified" equals and hashCode were considered. Also, any maven module with scala source code will not work with records at the moment, so they were also excluded.